--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //RecyclerView item swipe decoration
-    compile 'com.agilie:swipe2delete:1.0'
+    implementation 'com.agilie:swipe2delete:1.0'
 }
